--- a/theme/vmenu/css/style.css
+++ b/theme/vmenu/css/style.css
@@ -1,4 +1,335 @@
 /**
+ * Navigation-with-Search
+ */
+
+.navigation-clean-search {
+  background:#fff;
+  padding-top:10px;
+  padding-bottom:10px;
+  color:#333;
+  border-radius:0;
+  box-shadow:none;
+  border:none;
+  margin-bottom:0;
+}
+
+@media (max-width:767px) {
+  .navigation-clean-search {
+    padding-top:0;
+    padding-bottom:0;
+  }
+}
+
+@media (max-width:767px) {
+  .navigation-clean-search .navbar-header {
+    padding-top:10px;
+    padding-bottom:10px;
+  }
+}
+
+@media (max-width:767px) {
+  .navigation-clean-search .navbar-right {
+    margin-bottom:20px;
+  }
+}
+
+.navigation-clean-search .navbar-brand {
+  font-weight:bold;
+  color:inherit;
+}
+
+.navigation-clean-search .navbar-brand:hover {
+  color:#222;
+}
+
+.navigation-clean-search.navbar-inverse .navbar-brand:hover {
+  color:#f0f0f0;
+}
+
+.navigation-clean-search .navbar-brand img {
+  height:100%;
+  display:inline-block;
+  margin-right:10px;
+  width:auto;
+}
+
+.navigation-clean-search .navbar-toggle {
+  border-color:#ddd;
+}
+
+.navigation-clean-search .navbar-toggle:hover, .navigation-clean-search .navbar-toggle:focus {
+  background:none;
+}
+
+.navigation-clean-search.navbar-inverse .navbar-toggle {
+  border-color:#555;
+}
+
+.navigation-clean-search .navbar-toggle .icon-bar {
+  background-color:#888;
+}
+
+.navigation-clean-search.navbar-inverse .navbar-toggle .icon-bar {
+  background-color:#eee;
+}
+
+.navigation-clean-search .navbar-collapse, .navigation-clean-search .navbar-form {
+  border-top-color:#ddd;
+}
+
+.navigation-clean-search.navbar-inverse .navbar-collapse, .navigation-clean-search.navbar-inverse .navbar-form {
+  border-top-color:#333;
+}
+
+.navigation-clean-search .navbar-nav > .active > a, .navigation-clean-search .navbar-nav > .open > a {
+  background:none;
+  box-shadow:none;
+}
+
+.navigation-clean-search.navbar-default .navbar-nav > .active > a, .navigation-clean-search.navbar-default .navbar-nav > .active > a:focus, .navigation-clean-search.navbar-default .navbar-nav > .active > a:hover {
+  color:#8f8f8f;
+  box-shadow:none;
+  background:none;
+  pointer-events:none;
+}
+
+.navigation-clean-search.navbar .navbar-nav > li > a {
+  padding-left:18px;
+  padding-right:18px;
+}
+
+.navigation-clean-search.navbar-default .navbar-nav > li > a {
+  color:#465765;
+}
+
+.navigation-clean-search.navbar-default .navbar-nav > li > a:focus, .navigation-clean-search.navbar-default .navbar-nav > li > a:hover {
+  color:#c2c3c3 !important;
+  background-color:transparent;
+}
+
+.navigation-clean-search .navbar-nav > li > .dropdown-menu {
+  margin-top:-5px;
+  box-shadow:0 4px 8px rgba(0,0,0,.1);
+  background-color:#fff;
+  border-radius:2px;
+}
+
+.navigation-clean-search .dropdown-menu > li > a:focus, .navigation-clean-search .dropdown-menu > li > a {
+  line-height:2;
+  font-size:14px;
+  color:#37434d;
+}
+
+.navigation-clean-search .dropdown-menu > li > a:focus, .navigation-clean-search .dropdown-menu > li > a:hover {
+  background:#eee;
+  color:inherit;
+}
+
+@media (max-width:767px) {
+  .navigation-clean-search .navbar-nav .open .dropdown-menu {
+    box-shadow:none;
+  }
+}
+
+@media (max-width:767px) {
+  .navigation-clean-search .navbar-nav .open .dropdown-menu > li > a {
+    color:#37434d;
+    padding-top:12px;
+    padding-bottom:12px;
+    line-height:1;
+  }
+}
+
+.navigation-clean-search.navbar-inverse {
+  background-color:#1f2021;
+  color:#fff;
+}
+
+.navigation-clean-search.navbar-inverse .navbar-nav > .active > a, .navigation-clean-search.navbar-inverse .navbar-nav > .active > a:focus, .navigation-clean-search.navbar-inverse .navbar-nav > .active > a:hover {
+  color:#8f8f8f;
+  box-shadow:none;
+  background:none;
+  pointer-events:none;
+}
+
+.navigation-clean-search.navbar-inverse .navbar-nav > li > a {
+  color:#dfe8ee;
+}
+
+.navigation-clean-search.navbar-inverse .navbar-nav > li > a:focus, .navigation-clean-search.navbar-inverse .navbar-nav > li > a:hover {
+  color:#fff !important;
+  background-color:transparent;
+}
+
+.navigation-clean-search.navbar-inverse .navbar-nav > li > .dropdown-menu {
+  background-color:#1f2021;
+}
+
+.navigation-clean-search.navbar-inverse .dropdown-menu > li > a:focus, .navigation-clean-search.navbar-inverse .dropdown-menu > li > a {
+  color:#f2f5f8;
+}
+
+.navigation-clean-search.navbar-inverse .dropdown-menu > li > a:focus, .navigation-clean-search.navbar-inverse .dropdown-menu > li > a:hover {
+  background:#363739;
+}
+
+@media (max-width:767px) {
+  .navigation-clean-search.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+    color:#fff;
+  }
+}
+
+.navigation-clean-search .action-button, .navigation-clean-button .action-button:active {
+  background:#56c6c6;
+  border-radius:20px;
+  color:#fff !important;
+  box-shadow:none;
+  border:none;
+  text-shadow:none;
+  padding:10px 22px;
+  transition:background-color 0.25s;
+}
+
+.navigation-clean-search .action-button:hover, .navigation-clean-search .action-button:focus {
+  background:#66d7d7;
+}
+
+.navigation-clean-search.navbar-inverse .action-button, .navigation-clean-search.navbar-inverse .action-button:active {
+  background:#208f8f;
+}
+
+.navigation-clean-search.navbar-inverse .action-button:hover {
+  background:#269d9d;
+}
+
+.navigation-clean-search .navbar-form label {
+  color:#ccc;
+}
+
+.navigation-clean-search .navbar-form .search-field {
+  background:none;
+  border:none;
+  border-bottom:1px solid transparent;
+  border-radius:0;
+  color:#ccc;
+  box-shadow:none;
+  color:inherit;
+  transition:border-bottom-color 0.3s;
+}
+
+@media (max-width:767px) {
+  .navigation-clean-search .navbar-form .search-field {
+    display:inline-block;
+    width:80%;
+  }
+}
+
+.navigation-clean-search .navbar-form .search-field:focus {
+  border-bottom:1px solid #ccc;
+}
+
+/**
+ * Simple-Slider
+ */
+
+.simple-slider .swiper-slide {
+  height:487px;
+  text-align:center;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+}
+
+.simple-slider .swiper-button-next, .simple-slider .swiper-button-prev {
+  width:50px;
+  margin-left:20px;
+  margin-right:20px;
+}
+
+@media (max-width:767px) {
+  .simple-slider .swiper-button-next, .simple-slider .swiper-button-prev {
+    display:none;
+  }
+}
+
+@media (max-width:767px) {
+  .simple-slider .swiper-slide {
+    height:241px;
+  }
+}
+ 
+/**
+ * Footer-Basic
+ */
+
+.footer-basic {
+  padding:25px 0;
+  background-color:#ffffff;
+  color:#4b4c4d;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+section#legal.legal {
+  text-align:center;
+}
+
+/**
  * Place your custom styles here.
  */
 
+form.navbar-form.navbar-left {
+  width:30%;
+}
+
+@media (min-width:768px) {
+  .navbar-form .form-control {
+    display:inline-block;
+    width:80%;
+    vertical-align:middle;
+  }
+}
