--- a/theme/vmenu/templates/system/page.html.twig
+++ b/theme/vmenu/templates/system/page.html.twig
@@ -68,9 +68,9 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
-                        <li role="presentation"><a class="text-uppercase" href="#">Orders</a></li>
-                        <li role="presentation"><a class="text-uppercase" href="#">Reports</a></li>
-                    </ul><a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="#">Register</a><a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="#">Log In</a></div>
+                        <li role="presentation"><a class="text-uppercase" href="/orders">Orders</a></li>
+                        <li role="presentation"><a class="text-uppercase" href="/reports">Reports</a></li>
+                    </ul><a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user">Account</a></div>
             </div>
         </nav>
     </div>
