--- a/theme/vmenu/templates/system/page.html.twig
+++ b/theme/vmenu/templates/system/page.html.twig
@@ -63,14 +63,19 @@
     <div>
         <nav class="navbar navbar-default navigation-clean-search">
             <div class="container">
-                <div class="navbar-header"><a class="navbar-brand navbar-link" href="http://139.62.210.134/">Digital Diner</a>
+                <div class="navbar-header"><a class="navbar-brand navbar-link" href="http://139.62.210.134/">V-Menu</a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
                         <li role="presentation"><a class="text-uppercase" href="/orders">Orders</a></li>
                         <li role="presentation"><a class="text-uppercase" href="/reports">Reports</a></li>
-                    </ul><a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user">Account</a></div>
+                    </ul>
+                    <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user">Account</a>
+                    {% if logged_in %}
+                        <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user/logout">Log Out</a>
+                    {% endif %}
+                </div>
             </div>
         </nav>
     </div>
