--- a/theme/vmenu/templates/system/page.html.twig
+++ b/theme/vmenu/templates/system/page.html.twig
@@ -71,9 +71,12 @@
                         <li role="presentation"><a class="text-uppercase" href="/orders">Orders</a></li>
                         <li role="presentation"><a class="text-uppercase" href="/reports">Reports</a></li>
                     </ul>
-                    <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user">Account</a>
                     {% if logged_in %}
+						<a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user">My Account</a>
                         <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user/logout">Log Out</a>
+					{% else %}
+						<a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user/register">Register</a>
+                        <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user">Log In</a>
                     {% endif %}
                 </div>
             </div>
