--- a/theme/vmenu/templates/system/page.html.twig
+++ b/theme/vmenu/templates/system/page.html.twig
@@ -60,29 +60,40 @@
 {# Navbar #}
 {% if page.navigation or page.navigation_collapsible %}
   {% block navbar %}
-    <div>
-        <nav class="navbar navbar-default navigation-clean-search">
-            <div class="container">
-                <div class="navbar-header"><a class="navbar-brand navbar-link" href="http://139.62.210.134/">Digital Diner</a>
-                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                </div>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav">
-                        <li role="presentation"><a class="text-uppercase" href="/orders">Orders</a></li>
-                        <li role="presentation"><a class="text-uppercase" href="/reports">Reports</a></li>
-                    </ul>
-                    {% if logged_in == true %}
-                        <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user">My Account</a>
-                        <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user/logout">Log Out</a>
-                    {% endif %}
-					{% if logged_in == false %}
-                        <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user/register">Register</a>
-                        <a class="btn btn-default navbar-btn navbar-right action-button" role="button" href="/user">Log In</a>
-                    {% endif %}
-                </div>
-            </div>
-        </nav>
-    </div>
+    {%
+      set navbar_classes = [
+        'navbar',
+        theme.settings.navbar_inverse ? 'navbar-inverse' : 'navbar-default',
+        theme.settings.navbar_position ? 'navbar-' ~ theme.settings.navbar_position|clean_class : container,
+      ]
+    %}
+    <header{{ navbar_attributes.addClass(navbar_classes) }} id="navbar" role="banner">
+      {% if not navbar_attributes.hasClass('container') %}
+        <div class="{{ container }}">
+      {% endif %}
+      <div class="navbar-header">
+        {{ page.navigation }}
+        {# .btn-navbar is used as the toggle for collapsed navbar content #}
+        {% if page.navigation_collapsible %}
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+            <span class="sr-only">{{ 'Toggle navigation'|t }}</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        {% endif %}
+      </div>
+
+      {# Navigation (collapsible) #}
+      {% if page.navigation_collapsible %}
+        <div id="navbar-collapse" class="navbar-collapse collapse">
+          {{ page.navigation_collapsible }}
+        </div>
+      {% endif %}
+      {% if not navbar_attributes.hasClass('container') %}
+        </div>
+      {% endif %}
+    </header>
   {% endblock %}
 {% endif %}
 
@@ -169,19 +180,8 @@
 
 {% if page.footer %}
   {% block footer %}
-    <div class="footer-basic">
-        <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <section id="legal" class="legal">
-                <ul class="list-inline">
-                    <li><a href="/contact">Contact Us</a></li>
-                    <li><a href="/privacy">Privacy Policy</a></li>
-                    <li><a href="/terms">Terms of Service</a></li>
-                </ul>
-                <div id="disclaimer" class="disclaimer"><small>All users of our services agree to be bound by our <a href="/terms">Terms of Service</a> and subject to our <a href="/privacy">Privacy Policy</a>.</small></div>
-                <div id="copyright" class="copyright"><small>© 2016 V-Menu. All rights reserved.</small></div>
-            </section>
-        </footer>
-    </div>
+    <footer class="footer {{ container }}" role="contentinfo">
+      {{ page.footer }}
+    </footer>
   {% endblock %}
 {% endif %}
